--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -18,6 +18,20 @@
 
   // =================================================
 
+  // ---------- Comments ----------
+
+  //-single line comments-
+  // console.log("Hello try to comment me");
+
+  //-multiline comments-
+  /*console.log("A");
+  console.log("B");
+  console.log("C");
+  console.log("D");
+  console.log("E");*/
+
+  // =================================================
+
 
 
 
