loos type and dynamic typing in JS

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -32,7 +32,23 @@
 
   // =================================================
 
+  // var myName="Shihan";
+  // console.log(myName);
 
+  // ---------- loos type and dynamic typing ----------
+/*
+  var myName = "Shihan";
+  typeof myName;
+  // "String"
+
+  myName = 100;
+  typeof myName;
+  // "number"
+
+  myName = true;
+  typeof myName;
+  // "boolean"
+*/
 
 
 
