--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -50,6 +50,15 @@
   // "boolean"
 */
 
+  // =================================================
+
+  // ---------- Declaration Types ----------
+               /*  Var
+                   let
+                   const*/
+
+
+
 
 
 
