--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -58,8 +58,38 @@
                    const*/
 
 
+  // ---------- Var Declaration ----------
+  // support dynamic typing
+  // can duplicate identifier
+  // no Scope
+/*
 
+  var abc=100;
+  abc=300;
+  // 300
 
+  abc="ABC";
+  // "ABC"
+  typeof abc;
+  // "String"
+
+  var abc="D";
+  var abc=100;
+
+  abc;
+  // 100
+
+  var age=30;
+  {
+      console.log(age);//valid
+  }
+
+  {
+      var name="Shihan";
+  }
+  console.log(name);//valid
+
+*/
 
 
 </script>
