--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -84,12 +84,51 @@
       console.log(age);//valid
   }
 
+  ///////////////////////
+
   {
       var name="Shihan";
   }
   console.log(name);//valid
 
 */
+
+
+  // ---------- let Declaration ----------
+  // support dynamic type
+  // cannot duplicate identifier
+  // scope satisfied
+
+/*
+  let myName="Shihan";
+  typeof myName;
+  // "String"
+
+  myName=100;
+  typeof myName;
+  // "number"
+
+  let age=10;
+  let age=20; // error
+
+  let name="Shihan"
+  {
+      console.log(name);// valid
+  }
+  ///////////////////////
+
+  {
+      let address="Galle";
+  }
+  console.log(address); // error
+
+  ///////////////////////
+
+  {
+      let address="Galle";
+      console.log(address); // valid
+  }
+  */
 
 
 </script>
