--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -130,6 +130,32 @@
   }
   */
 
+  // ---------- const Declaration ----------
+  // read only values
+  // scope satisfied
+
+/*
+  const age = 10;
+  // age = 20; // error
+
+  {
+      console.log(age);// valid
+  }
+  //////////////////////////
+
+  {
+      const a="Hello";
+  }
+  console.log(a); //error
+
+  */
+
+
+
+
+
+
+
 
 </script>
 </body>
