how to create variables

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -150,6 +150,23 @@
 
   */
 
+  //////////////////////////
+
+  // ---------- Variables ----------
+  // case sensitive
+  // a-z characters
+  // _ and $ can be apply
+  // number can be apply for the second character of the variable
+/*
+
+  let ab = 100;
+  let aB = 200;
+  // let 2ab=100; //Error
+  let z = 100;
+  let _z = 100;
+  let $_z = 100;
+  let a10 = 100;
+*/
 
 
 
