--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -168,10 +168,30 @@
   let a10 = 100;
 */
 
+  //////////////////////////
+
+  // ---------- Scopes ----------
+  // Global Scope
+  // local scope
+
+  // global Scope
+/*
+  var myName="Shihan";
+  let age = 20;
+*/
+
+  // local Scope
+/*
+  {
+      let a=10;
+      let b=10; // local scope
+
+      console.log(a);
+  }
+*/
 
 
-
-
+  
 
 
 </script>
