Hoisting - (Variable Hoisting)

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -191,7 +191,37 @@
 */
 
 
-  
+  //////////////////////////
+
+  // ---------- Hoisting ----------
+  // Variable Hoisting
+  // function Hoisting
+
+
+/*
+  // Variable Hoisting
+  console.log(x); // undefine
+
+  var x=100;
+  console.log(x); // 100
+
+  console.log(g); // undefine but not error
+  var g = 200;
+
+  //////////////////////////////////////////
+  console.log("First Console - " + m) // First Console - undefined
+  var m=200;
+  console.log("Second Console - " + m); // Second Console - 200
+
+  //////////////////////////////////////////
+  console.log("First Console - " + f) // error
+  var mc=200;
+  console.log("Second Console - " + f); // error
+  */
+
+
+
+
 
 
 </script>
