Hoisting - (Function Hoisting)

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -221,6 +221,15 @@
 
 
 
+  // Function Hoisting
+/*
+  function getMyName(){
+      console.log("My Name is Shihan");
+  }
+
+  getMyName() //Calling Statement
+ */
+
 
 
 
