Data Types in JS

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -241,8 +241,14 @@
 
   // ===========================================================================
 
-
-
+  // Data Types in JS
+/*
+    String
+    Boolean
+    Number
+    null
+    undefined
+ */
 
 </script>
 </body>
