Data Types (Null and Undefined)

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -250,6 +250,28 @@
     undefined
  */
 
+  // ==========================================
+
+  // Null and Undefined
+/*
+  var myName
+  typeof myName
+  // "undefine"
+  console log(c)
+
+
+  var v1=null
+  typeof v1;
+  // "Object"
+*/
+
+  // ==========================================
+
+
+
+
+
+
 </script>
 </body>
 </html>
