Data Types (String)

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -267,6 +267,17 @@
 
     // ==========================================
 
+    // String
+/*
+    var str1 = 'Galle'
+    var str2 = "Colombo"
+
+    typeof str1;
+    typeof str2;
+*/
+
+
+
 
 </script>
 </body>
