String related function

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -276,6 +276,79 @@
     typeof str2;
 */
 
+    // String related function
+    // --------------------------
+/*
+    length
+    toUpperCase
+    toLowerCase
+    trim
+    trimLeft
+    trimRight
+    split
+    charAt
+    charCodeAt
+    indexof
+    substr
+    substring
+  */
+/*
+    var str1 = "ABCDEFGHIJKLMNOP12345abcdf";
+    str1.length
+    // 26
+
+
+    str1.toUpperCase();
+    // "ABCDEFGHIJKLMNOP12345ABCDF"
+
+    str1.toLowerCase();
+    // "abcdefghijklmnop1234abcdf"
+
+
+    var str2 = "      A      ";
+    str2.length;
+    // 13
+
+    str2.trim();
+    // "A"
+
+    str2.trimLeft();
+    // "A      "
+
+    str2.trimRight();
+    // "      A"
+
+    var str3 = "AB-CD-MD-EF-HJ";
+    str3.split('-');
+    // ["AB","CD","MD","EF","HJ"] //array
+
+    var str4 = "ABCDEF";
+    str4.charAt(0);
+    // "A"
+
+    str4.charAt(1);
+    // "B"
+
+    str4.charCodeAt(1);
+    // 65
+
+    str4.indexOf('A');
+    // 0
+
+    str4.indexOf("G");
+    // -1
+
+    var str5 = "abcdefghijklmn";
+    str5.substr(5,2);
+    // "fg"
+
+    str5.substring(1,2);
+    // "b"
+*/
+
+    // ==========================================
+
+
 
 
 
