Data Types (boolean)

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -348,6 +348,22 @@
 
     // ==========================================
 
+    // Boolean
+    // -------
+/*
+    true
+    false
+    */
+/*
+    var bool1 = false;
+    var bool2 = true;
+    typeof bool1;
+    // "boolean"
+    typeof bool2;
+    // "boolean"
+*/
+
+
 
 
 
