Data Types (Number)

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -363,6 +363,47 @@
     // "boolean"
 */
 
+    // ==========================================
+
+    // Number
+    // -------
+/*
+    Integer ---> Decimal 10
+                 Octal 8
+                 Binary 2
+                 HexDecimal 16
+
+    Floating Poing
+*/
+
+/*
+    var integer = 10;
+    var decimal = 100;
+    var octal = 0o23;
+    var binary = 0b1010;
+    var hexDecimal = 0xA;
+
+    var floatingPoint = 10.23;
+
+    typeof integer;
+    // "number"
+    typeof decimal;
+    // "number"
+    typeof octal;
+    // "number"
+    typeof binary;
+    // "number"
+    typeof hexDecimal;
+    // "number"
+    typeof floatingPoint;
+    // "number"
+*/
+
+    // ==========================================
+
+
+
+
 
 
 
