Data Types (Object)

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -401,10 +401,10 @@
 
     // ==========================================
 
-
-
-
-
+    // Object
+    // ------
+    // function base (Constructor base)
+    // literal base
 
 
 
