literal base objects

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -407,6 +407,33 @@
     // literal base
 
 
+    // ------ literal base objects ------
+    /*
+        //name value container
+        var myDetails = {
+            "id" : "C001",
+            "name" : "Shihan",
+            "age" : 20,
+            "state" : false
+        }
+
+        typeof myDetails;
+        // "object"
+
+        myDetails;
+        // {id:"C001", name:"Shihan", age:20, state:false}
+
+        typeof myDetails.id;
+        // "String"
+
+        typeof myDetails.age;
+        // "number"
+
+        typeof myDetails.state;
+        // "boolean"
+     */
+
+
 
 
 </script>
