value access using dot notation and bracket notation

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -432,8 +432,16 @@
         typeof myDetails.state;
         // "boolean"
      */
+/*
+    // Value access using dot notation
+    myDetails.id;
+    myDetails.name;
+    myDetails.age; //dot notation
 
-
+    // Value access using bracket notation
+    myDetails['name']; // bracket notation
+    myDetails['age'];
+*/
 
 
 </script>
