js properties can be added dynamically

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -444,6 +444,55 @@
 */
 
 
+    ///////////////////////////////////////////////
+/*
+    // js properties can be added dynamically
+
+    //Create empty Object
+    var test = {
+
+    }
+    typeof test; // Check Type of test
+    // "object"
+
+    teat.id="C001"; // add property dynamically
+    test;
+    // {id : "C001"}
+
+    test.id; // check id value
+    // "C001"
+
+    test.name = "Shihan"; // add property dynamically
+    // "Shihan"
+
+    test;
+    // {id:"C001", name:"Shihan"}
+
+    test.id;
+    // "C001"
+
+    test.id = "M001"; // change id value dynamically
+    // "M001"
+
+    test;
+    // {id: "M001", name:"Shihan"}
+
+    delete test.id; // delete property dynamically
+    // true
+
+    test;
+    // {name:"Shihan"}
+
+    delete test.name; // delete property dynamically
+    // true
+
+    test;
+    // {}
+*/
+
+
+
+
 </script>
 </body>
 </html>
