how to create arrays in js

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -530,6 +530,17 @@
     // {id:"C001", name:"Nimal", getMyName: f}
 */
 
+    ///////////////////////////////////////////////
+
+    // ====================================================================================
+
+    // --------- Arrays in JS ----------
+    // ---------------------------------
+    //var array=[];  //literal base array
+    //var array2 = new Array();  //constructor base array
+
+
+
 
 </script>
 </body>
