Array related methods in JS

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -539,6 +539,111 @@
     //var array=[];  //literal base array
     //var array2 = new Array();  //constructor base array
 
+    // --------- Array related method ------------
+/*
+                pop();
+                push();
+                shift();
+                unshift();
+                slice();
+                splice();
+                reverse();
+                length()
+*/
+/*
+    var ar = ["A","B","C","D"];
+
+    ar.length; // check array length
+    // 4
+
+    // remove last index value of a array
+    // method pop();
+    ar.pop();
+    // "D"
+
+    ar;
+    // ["A","B","C"]
+
+    ar.pop();
+    // "C"
+
+    // we can add multiple values to the last index
+    // method push();
+    ar;
+    // ["A","B"]
+
+    // ---------------------------------
+
+    ar.push("M");
+
+    ar.push("G");
+
+    ar;
+    // ["A","B","M","G"]
+
+    ar.push("R","F");
+
+    ar;
+    // ["A","B","M","G","R","F"]
+
+    // ---------------------------------
+
+    // remove first index value
+    // method shift();
+    ar.shift();
+    // "A"
+
+    ar;
+    // ["B","M","G","R","F"]
+
+    ar.shift();
+    // "B"
+
+    ar;
+    // ["M","G","R","F"]
+
+    // ---------------------------------
+
+    // can add balues to the first index
+    // method unshift();
+    ar.unshift("A");
+    ar;
+    // ["A","M","G","R","F"]
+
+    // ---------------------------------
+
+    // can remove a indexed value from the index number
+    // method splice();
+    ar.splice(2,1);
+    ["G"]
+
+    ar;
+    // ["A","M","R","F"]
+
+    // ---------------------------------
+
+    // can copy a array elements to a new reference
+    // (Can give a range also from index numbers)
+    // method slice();
+    var newArray = ar.slice();
+
+    var newArray = ar.slice(0,3);
+
+    // ---------------------------------
+
+    // can reverse the array
+    // method reverse();
+    ar.reverse();
+    // ["F","R","M","A"]
+*/
+
+
+
+
+
+
+
+
 
 
 
