create function in JS

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -638,6 +638,20 @@
 */
 
 
+    // ====================================================================================
+
+    // ------------ Function in JS ---------------
+
+    // create function
+/*
+    function testingFunction(){
+        console.log("Testing Function was Called");
+    }
+    testingFunction();
+  */
+
+
+
 
 
 
