Check method overloading in JS

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -651,6 +651,25 @@
   */
 
 
+    // not work method overloading
+/*
+    function getMyDetails(){
+        console.log("My Name is" + name);
+    }
+    getMyDetails();
+
+    function getMyDetails(id,name){
+        console.log("My Name is" + name + " " + "My ID is" + id);
+    }
+
+    function getMyDetails(name){
+        console.log("My Name is" + name);
+    }
+    getMyDetails("Dasun");
+*/
+    //-----------------------------------
+
+
 
 
 
