check argument array in JS

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -669,6 +669,20 @@
 */
     //-----------------------------------
 
+    /*
+        function test(){
+            console.log(arguments[0]) //argument array
+            console.log(arguments[1])
+        }
+        test("C001","Dasun","Galle",10,20,30,50);
+
+        function test(id, name){
+            console.log(id)
+            console.log(name)
+        }
+        test("C001","Dasun","Galle");
+        */
+
 
 
 
