two types of Function

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -683,8 +683,31 @@
         test("C001","Dasun","Galle");
         */
 
+    //-------------------------------------------------------------------------
 
+    // ---------- Two types of Function -------------------
+    //   declaration
+    //   expression
 
+    // ======================
+
+    //   declaration
+/*
+    function getMyDetails(){
+        console.log("My name is Kamal");
+    }
+    getMyDetails();
+*/
+
+    // -------------------------------
+
+    //   expression
+/*
+    var getMyName = function (){
+        return "Dasun";
+    };
+    var name = getMyName();
+    */
 
 
 
