loops and iteration

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -727,6 +727,7 @@
     // -----------------------------------------------
 
     // check global scope variable access local scope
+/*
     var id = "C001";
     let name = "Dasun";
 
@@ -740,6 +741,20 @@
         }
     }
     mainMethod();
+*/
+
+    // ======================================================================
+
+    // ----------------- loops and iteration ---------------------------------
+    // for loop
+    // while loop
+    // do while
+
+    // for in
+    // for of
+    // for each
+
+
 
 
 
