--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -754,6 +754,13 @@
     // for of
     // for each
 
+    // -----------------------------------------------------------------------
+    // ----------- For Loop ------------
+/*
+    for (let i = 0; i <10 ; i++) {
+        console.log(i);
+    }
+    */
 
 
 
