--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -762,6 +762,15 @@
     }
     */
 
+    // ----------- While Loop ------------
+
+/*
+    var i=0;
+    while (i<10){
+        i++;
+        console.log(i);
+    }
+*/
 
 
 
