--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -772,6 +772,16 @@
     }
 */
 
+    // ----------- do-While Loop ------------
+
+/*
+    var i=0;
+    do{
+        i++;
+        console.log(i);
+    }while (i<10);
+*/
+
 
 
 
