--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -782,6 +782,18 @@
     }while (i<10);
 */
 
+    // ----------- for of------------
+    var array = [10,20,30,40,50,60];
+    for(var i of array){
+        console.log(i);
+    }
+
+
+
+
+
+
+
 
 
 
