--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -783,10 +783,20 @@
 */
 
     // ----------- for of------------
+/*
     var array = [10,20,30,40,50,60];
     for(var i of array){
         console.log(i);
     }
+*/
+
+
+    // ----------- for in ------------
+    var array = [10,20,30,40,50,60];
+    for(var i in array){
+        console.log(i);
+    }
+
 
 
 
