--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -792,11 +792,26 @@
 
 
     // ----------- for in ------------
+/*
     var array = [10,20,30,40,50,60];
     for(var i in array){
         console.log(i);
     }
+*/
 
+
+    // ----------- for Each ------------
+
+    var array = [10,20,30,40,50,60];
+    array.forEach(function (v){
+        console.log(v);
+    });
+
+    //using arrow function
+
+    array.forEach((v)=>{
+        console.log(v);
+    });
 
 
 
