--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -801,7 +801,7 @@
 
 
     // ----------- for Each ------------
-
+/*
     var array = [10,20,30,40,50,60];
     array.forEach(function (v){
         console.log(v);
@@ -812,11 +812,19 @@
     array.forEach((v)=>{
         console.log(v);
     });
+*/
 
 
+    // ======================================================================
 
+    // ----------------- Control Structures ---------------------
+    // if
+    // else
+    // else if
+    // switch
+    // ternary operator
 
-
+    // -----------------------------------------------------------------
 
 
 
