--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -826,7 +826,12 @@
 
     // -----------------------------------------------------------------
 
-
+    // ------------ if else ----------
+/*    if (true){
+        console.log("Condition is true");
+    }else{
+        console.log("Condition is false");
+    }*/
 
 
 
