--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -833,6 +833,19 @@
         console.log("Condition is false");
     }*/
 
+    // ------------ else if ----------
+
+    var source = 10;
+    if (source === 1){
+        console.log("Condition is 1");
+    }else if (source === 2){
+        console.log("Condition is 2");
+    }else if (source === 3) {
+        console.log("Condition is 3");
+    }else{
+        console.log("Condition is Nothing");
+    }
+
 
 
 </script>
