--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -834,7 +834,7 @@
     }*/
 
     // ------------ else if ----------
-
+/*
     var source = 10;
     if (source === 1){
         console.log("Condition is 1");
@@ -844,6 +844,23 @@
         console.log("Condition is 3");
     }else{
         console.log("Condition is Nothing");
+    }
+*/
+
+    // ------------ Switch ----------
+    var source = "CMJD"
+    switch (source) {
+        case "IJSE":
+            console.log("Case is IJSE");
+            break;
+        case "RWAD":
+            console.log("Case is RWAD");
+            break;
+        case "CMJD":
+            console.log("Case is CMJD");
+            break;
+        default:
+            console.log("Case is Default");
     }
 
 
