--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -848,6 +848,7 @@
 */
 
     // ------------ Switch ----------
+/*
     var source = "CMJD"
     switch (source) {
         case "IJSE":
@@ -862,7 +863,10 @@
         default:
             console.log("Case is Default");
     }
+*/
 
+    // ------------ ternary Operator ----------
+    var response = (10>20) ? 10:20;
 
 
 </script>
