--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -866,7 +866,24 @@
 */
 
     // ------------ ternary Operator ----------
-    var response = (10>20) ? 10:20;
+    // var response = (10>20) ? 10:20;
+
+
+    // ======================================================================
+
+    // --------------- convert String to Numbers ------------
+    //passInt
+    //PassFloat
+
+/*
+    var num1 = "100";
+    var num2 = 200;
+    var num3 = parseInt(num1);
+    var total = num3 + num2;
+    console.log(total);
+*/
+
+
 
 
 </script>
