convert number to String

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -883,6 +883,13 @@
     console.log(total);
 */
 
+    // --------------- convert number to String ------------
+    // toString()
+
+/*    var number = 100;
+    number.toString();
+   */
+
 
 
 
