Object Oriented Programming in JS

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -891,6 +891,13 @@
    */
 
 
+    // ======================================================================
+
+    // Object Oriented Programming in JS
+    // what we chn do with properties of a object
+   /* var ob={
+        'id'='C001'
+    }*/
 
 
 </script>
