Object Oriented Programming in JS

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -893,11 +893,28 @@
 
     // ======================================================================
 
-    // Object Oriented Programming in JS
+    // ----------------- Object Oriented Programming in JS ----------------------
+
     // what we chn do with properties of a object
-   /* var ob={
-        'id'='C001'
-    }*/
+/*
+    var ob={
+        'id':'C001'
+    }
+*/
+
+    // can add a new property laiter
+    // ob.name = 'kasun';
+
+    // can get the keys of object properties
+    // Object.keys(ob);
+
+    // can delete object properties
+    // delete ob.id;
+
+    // can change properties values
+    // ob.id = "c002";
+
+
 
 
 </script>
