--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -891,7 +891,6 @@
    */
 
 
-    // ======================================================================
 
     // ----------------- Object Oriented Programming in JS ----------------------
 
@@ -913,6 +912,18 @@
 
     // can change properties values
     // ob.id = "c002";
+
+    // ======================================================================
+    // ---------- then how to change this as we want ---------
+
+    // --------------- Property Descriptors -----------------------
+/*
+    Enumerable
+    Configurable
+    Writable
+    value
+*/
+
 
 
 
