Writable - false updates

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -946,7 +946,17 @@
 
         ob.id
         // "C001" but not change
+
+        // can we get keys
+        // Object.keys(ob) //can
+
+        // can we delete
+        // delete ob.id; //can
+
+
     */
+
+
 
 
 
