--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -1027,6 +1027,19 @@
 */
 
 
+    // ======================================================================
+    // ---------- Properties ---------
+    // data properties
+    // accessor properties
+
+    // ----------------- Data Properties ------------------------
+/*
+    var ob ={
+        'id' : 'C001' // data properties
+    };
+*/
+
+
 
 
 
