Constructor base Objects

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -1146,12 +1146,43 @@
 
     // ===================================================================================================
 
+    // --------------------- Constructor base Objects ----------------------------------------
+    //Customer dto
+/*
+    var customer = {
+        'id' : 'C001',
+        'name' : 'Dasun'
+    }
+*/
 
+    // class base
+    // prototype base
 
+/*
+    function CustomerDTO(id,name,address,salary){
+        this.id = id;
+        this.name = name;
+        this.address = address;
+        this.salary = salary;
+    }
 
+    var customer = new CustomerDTO("C001","Kasun","Galle",1000);
 
+    customer
+    // CustomerDTO {id: 'C001', name: 'Kasun', address: 'Galle', salary: 1000}
 
+    customer.id;
+    // 'C001'
 
+    customer.name;
+    // 'Kasun'
+
+    customer.address;
+    // 'Galle'
+
+    Object.getOwnPropertyDescriptors(customer);
+
+*/
 
 
 
