--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -1184,6 +1184,49 @@
 
 */
 
+    // --------------------------------------------------------------------------------------------
+
+    // Add encapsulation
+
+/*
+    function Customer(id,name,address,salary){
+        this.id = id;
+        this.name = name;
+        this.address = address;
+        this.salary = salary;
+    }
+
+    this.getCustomrID = function (){
+        return this.id;
+    }
+
+    this.setCustomerID = function (id){
+        this.id = id;
+    }
+
+    var c = new Customer('C003' , 'Dasun' , 'Panadura' , 1000);
+
+    c.id;
+    // "C003"
+
+    c.getCustomerID();
+    // "C003"
+
+    c.id = "C001";
+    // "C001"
+
+    // c.setCustomerID("C002");
+
+    c.getCustomerID();
+    // "C002"
+*/
+
+
+
+
+
+    // ===================================================================================================
+
 
 
 
