--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -1221,6 +1221,18 @@
     // "C002"
 */
 
+    // step 02
+/*
+    function Customer(id,name,address,salary){
+        var id = id;
+        var name = name;
+        var address = address;
+        var salary = salary;
+    }
+
+    var c=new("C001", "Kamal", "Panadura", 1000 );
+ */
+
 
 
 
