--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -1234,6 +1234,57 @@
  */
 
 
+    // step 03
+/*
+    function Customer(id,name,address,salary){
+        var id = id;
+        var name = name;
+        var address = address;
+        var salary = salary;
+    }
+
+    this.getCustomerID = function (){
+        return id;
+    }
+
+    this.getCustomerName() = function (){
+        return name;
+    }
+
+    this.getCustomerAddress() = function (){
+        return address;
+    }
+
+    this.getCustomerSalary = function (){
+        return salary;
+    }
+
+    this.setCustomerID = function (idVal){
+        id = idVal;
+    }
+
+    this.setCustomerName = function (nameVal){
+        name = nameVal;
+    }
+
+    this.setCustomerAddress = function (addressVal) {
+        address = addressVal;
+    }
+
+    this.setCustomerSalary = function(salaryVal){
+        salary = salaryVal;
+    }
+
+    var c = new Customer('C003', 'Dasun', 'Panadura', 1000);
+
+    c.getCustomerID();
+    // "C003"
+
+    c.setCustomerID("C001");
+
+    c.getCustomerID();
+    // "C001"
+*/
 
 
 
