Prototype base Inheritance

--- a/01_Basic/index1.html
+++ b/01_Basic/index1.html
@@ -1292,19 +1292,15 @@
 
 
     // Prototype base Inheritance
+/*
+    var a = {
+        'id' : 'C001'
+    }
 
+    a._proto_ == Object.prototype;
+*/
 
-
-
-
-
-
-
-
-
-
-
-
+    
 
 
 </script>
